macro/src/snapshots/krust_sitter_macro__tests__enum_with_unamed_vector.snap
---
source: macro/src/lib.rs
assertion_line: 311
expression: "rustfmt_code(&expand_grammar(parse_quote!\n{\n    mod grammar\n    {\n        #[derive(krust_sitter::Rule)] pub struct Number\n        { #[leaf(re(r\"\\d+\"))] value: u32 } #[derive(krust_sitter::Rule)]\n        #[language] pub enum Expr { Numbers(#[repeat1] Vec<Number>) }\n    }\n}).to_token_stream().to_string())"
---
mod grammar {
    impl ::krust_sitter::Extract for Number {
        type Output = Self;
        type LeafFn = ();
        #[allow(non_snake_case)]
        fn extract<'tree>(
            ctx: &mut ::krust_sitter::extract::ExtractContext,
            node: Option<::krust_sitter::tree_sitter::Node<'tree>>,
            source: &[u8],
            _l: Self::LeafFn,
        ) -> Result<Self, ::krust_sitter::extract::ExtractError<'tree>> {
            let node =
                node.ok_or_else(|| ::krust_sitter::error::ExtractError::missing_node(ctx))?;
            ::krust_sitter::__private::extract_struct_or_variant(
                stringify!(Number),
                node,
                move |state| {
                    Ok(Number {
                        value: ::krust_sitter::__private::extract_field::<u32, _>(
                            ::krust_sitter::extract::BaseExtractor::default(),
                            (),
                            state,
                            ::krust_sitter::extract::ExtractFieldContext::new(
                                0u32,
                                false,
                                |state| match state {
                                    0u32 => ::krust_sitter::extract::ExtractFieldState::Complete,
                                    _ => ::krust_sitter::extract::ExtractFieldState::Overflow,
                                },
                            ),
                            source,
                            "value",
                        )?,
                    })
                },
            )
        }
    }
    impl ::krust_sitter::rule::Rule for Number {
        const RULE_NAME: &'static str = "Number";
        fn produce_ast() -> String {
            String::new()
        }
    }
    impl ::krust_sitter::rule::Language for Expr {
        fn produce_grammar() -> String {
            String::new()
        }
        fn language() -> ::krust_sitter::tree_sitter::Language {
            unsafe extern "C" {
                fn tree_sitter_Expr() -> ::krust_sitter::tree_sitter::Language;
            }
            unsafe { tree_sitter_Expr() }
        }
        #[doc = r" Parse an input string according to the grammar. Returns either any parsing errors that happened, or a"]
        #[doc = "[`Expr`]"]
        #[doc = r" instance containing the parsed structured data."]
        fn parse(input: &str) -> ::krust_sitter::ParseResult<Self> {
            ::krust_sitter::__private::parse(input, Self::language)
        }
    }
    impl ::krust_sitter::Extract for Expr {
        type Output = Self;
        type LeafFn = ();
        #[allow(non_snake_case)]
        fn extract<'tree>(
            ctx: &mut ::krust_sitter::extract::ExtractContext,
            node: Option<::krust_sitter::tree_sitter::Node<'tree>>,
            source: &[u8],
            _l: Self::LeafFn,
        ) -> Result<Self, ::krust_sitter::extract::ExtractError<'tree>> {
            let node =
                node.ok_or_else(|| ::krust_sitter::error::ExtractError::missing_node(ctx))?;
            let mut cursor = node.walk();
            if !cursor.goto_first_child() {
                return Err(::krust_sitter::error::ExtractError::missing_node(ctx));
            }
            loop {
                let node = cursor.node();
                match node.kind() {
                    "Expr_Numbers" => {
                        return ::krust_sitter::__private::extract_struct_or_variant(
                            stringify!(Expr::Numbers),
                            node,
                            move |state| {
                                Ok(Expr::Numbers(::krust_sitter::__private::extract_field::<
                                    Vec<Number>,
                                    _,
                                >(
                                    ::krust_sitter::extract::BaseExtractor::default(),
                                    (),
                                    state,
                                    ::krust_sitter::extract::ExtractFieldContext::new(
                                        2u32,
                                        false,
                                        |state| match state {
                                            0u32 => {
                                                ::krust_sitter::extract::ExtractFieldState::Str(
                                                    "Number", true, false,
                                                )
                                            }
                                            1u32 => {
                                                ::krust_sitter::extract::ExtractFieldState::Repeat1
                                            }
                                            2u32 => {
                                                ::krust_sitter::extract::ExtractFieldState::Complete
                                            }
                                            _ => {
                                                ::krust_sitter::extract::ExtractFieldState::Overflow
                                            }
                                        },
                                    ),
                                    source,
                                    "0",
                                )?))
                            },
                        )
                    }
                    k => {
                        if !cursor.goto_next_sibling() {
                            return Err(::krust_sitter::error::ExtractError::missing_enum(ctx));
                        }
                    }
                }
            }
        }
    }
    impl ::krust_sitter::rule::Rule for Expr {
        const RULE_NAME: &'static str = "Expr";
        fn produce_ast() -> String {
            String::new()
        }
    }
}
